# ListGenerator

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
Kernel/: CMakeLists.txt  DataWrapperManager.cpp  DataWrapperManager.h  FilterModel.cpp  FilterModel.h  GDocUpdateShema.h  KernelCommon.h  Ustawienia.cpp  Ustawienia.h  credentials.json  googlesso.cpp  googlesso.h  kernel.cpp  kernel.h
Kernel/Data/: ArchData.Urzedy2.json  ArchitektData.json  Settings.json  UrzedyData.json
Kernel/DataTypes/: ArchitektData.h  CredentialsData.h  UrzadData.h
Kernel/DataWrappers/: ArchitektDataWrapper.cpp  ArchitektDataWrapper.h  IDataWrapper.h  UrzadDataWrapper.cpp  UrzadDataWrapper.h
Kernel/ModeleDanych/: AbstractAppModel.cpp  AbstractAppModel.h  ArchitektDataModel.cpp  ArchitektDataModel.h  DecyzjeModel.cpp  DecyzjeModel.h  InwestorzyModel.cpp  InwestorzyModel.h  ModeleDanych_global.h  PracowniaModel.cpp  PracowniaModel.h  ProjektModel.cpp  ProjektModel.h  UrzadDataModel.cpp  UrzadDataModel.h  modeledanych.cpp  modeledanych.h
SQLWrapper/: CMakeLists.txt  SQLWrapper_global.h  sqlwrapper.cpp  sqlwrapper.h
UI/: AppTheme.qml  AppToolBar.qml  ArchitektModel.qml  CMakeLists.txt  CheckBoxField.qml  Combo.qml  ComboField.qml  ComboField2.qml  ComboN.qml  ComboUrzedy.qml  ComboUrzedyField.qml  FieldText.qml  FileEdit.qml  Footer.qml  IconButton.qml  InwestorModel.qml  InwestycjaModel.qml  LeftPanel.qml  RoundedButton.qml  RoundedTextField.qml  ThemeSwitch.qml  UrzadModel.qml  Ustawienia.qml
